src/test/ui/hygiene/intercrate.stderr
error: macro expansion ignores token `;` and any following
  --> $DIR/auxiliary/intercrate.rs:8:16
   |
LL |             f();
   |                ^
   | 
  ::: $DIR/intercrate.rs:10:16
   |
LL |     assert_eq!(intercrate::foo::m!(), 1);
   |                ---------------------- help: you might be missing a semicolon here: `;`
   |                |
   |                caused by the macro expansion here
   |
   = note: the usage of `m!` is likely invalid in expression context

error: aborting due to previous error

